lots of fixes, new icons, alignment fixes, started start menu

--- a/index.css
+++ b/index.css
@@ -1,6 +1,8 @@
 * {
     margin: 0;
     padding: 0;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 /* Main desktop */
@@ -28,7 +30,7 @@ img.start {
 
 /* My computer icon */
 .desktop_my_computer_icon {
-    width: 5%;
+    width: 100%;
     display: grid;
     cursor: pointer;
     align-items: center;
@@ -40,17 +42,18 @@ img.my_computer {
     margin: 10px;
 }
 
-.desktop_my_computer_icon p {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: small;
+.desktop_icon_text {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: small;
     color: white;
+    width: 100%;
 }
 
 /* Recycle bin icon */
 .desktop_recycle_bin_icon {
-    width: 5%;
+    width: 100%;
     display: grid;
     cursor: pointer;
     align-items: center;
@@ -62,17 +65,9 @@ img.recycle_bin {
     margin: 10px;
 }
 
-.desktop_recycle_bin_icon p {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: small;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    color: white;
-}
-
 /* My documents icon */
 .desktop_my_documents_icon {
-    width: 5%;
+    width: 100%;
     display: grid;
     cursor: pointer;
     align-items: center;
@@ -84,17 +79,10 @@ img.my_documents {
     margin: 10px;
 }
 
-.desktop_my_documents_icon p {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: small;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    color: white;
-}
 
 /* Internet Explorer icon */
 .desktop_internet_explorer_icon {
-    width: 5%;
+    width: 100%;
     display: grid;
     cursor: pointer;
     align-items: center;
@@ -106,17 +94,10 @@ img.internet_explorer {
     margin: 10px;
 }
 
-.desktop_internet_explorer_icon p {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: small;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    color: white;
-}
 
 /* MSN Messenger icon */
 .desktop_msn_messenger_icon {
-    width: 5%;
+    width: 100%;
     display: grid;
     cursor: pointer;
     align-items: center;
@@ -126,14 +107,6 @@ img.internet_explorer {
 img.msn_messenger {
     height: 50px;
     margin: 10px;
-}
-
-.desktop_msn_messenger_icon p {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: small;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    color: white;
 }
 
 
@@ -232,10 +205,79 @@ div.taskbar>.taskbar-right-icons p {
     position: absolute;
     z-index: 1;
     bottom: 100%;
-    left: 50%;
+    left: 20%;
     margin-left: -60px;
   }
   
   .tooltip:hover .tooltiptext {
     visibility: visible;
   }
+
+/* Start Menu Modal (background) */
+.start_menu_modal {
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
+    left: 0%;
+    top: 0%;
+    width: 100%; 
+    height: 100%;
+  }
+  
+  /* Start Menu Actual content */
+  .start_menu_content {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: small;
+    background-color: rgb(211, 208, 201);
+    margin: 0%;
+    padding: 3px;
+    border: 1px solid #888;
+    width: 400px;
+    border-style: solid;
+    border-right-color: rgb(128, 128, 128);
+    border-bottom-color: rgb(128, 128, 128);
+    border-top-color: rgb(255, 255, 255);
+    border-left-color: rgb(255, 255, 255);
+    box-shadow: 8px 8px 6px -6px black;
+    position: absolute;
+    bottom: 35px;
+    left: 0;
+  }
+
+  .start_menu_content>#start_menu_header {
+    height: 15%;
+    padding: 10px;
+    background-color: red;
+    background-image:
+      linear-gradient(
+        to right, 
+        rgb(16,35,105), rgb(171,195,231)
+      );
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: x-large;
+    color: white;
+  }
+
+  .start_menu_content>#bottom_hr_bar {
+    border-top: 1px solid rgb(128,128,128);
+    border-bottom: 1px solid rgb(211,208,201);
+  }
+
+  .log_off_shut_down_section {
+    padding-top: 8px;
+    padding-bottom: 4px;
+    float: right;
+  }
+
+  img.log_off_shut_down_img {
+    height: 35px;
+    border: solid;
+    border-color: white;
+    border-radius: 15%;
+    margin: 0%;
+    padding: 0%;
+}
+
+img.start_menu_program {
+    height: 45px;
+}
